Remove javac plugin that allowed using `--release` and `--add-exports` together (#3376)
Remove javac plugin that allowed using `--release` and `--add-exports` together as it doesn't actually work.